1. fixed bug with mobile flex stretching

--- a/src/components/TaskList/TaskList.scss
+++ b/src/components/TaskList/TaskList.scss
@@ -8,7 +8,7 @@
 
     @media (max-width: 991px) {
         max-height: 60%;
-        flex-grow: 2;
+        min-height: 60%;
     }
 
     &__header {
